--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,59 @@
-**/dependencies
-**/dataset
-__pycache__
-**/results
-**/logs
-**/outputs
-*.pyc
+target
+.idea/*
+!.idea/codeStyleSettings.xml
+!.idea/copyright
+*.iml
 
+# VSCode/Java #
+###############
+.classpath
+.project
+.settings
+.factorypath
+
+# Compiled source #
+###################
+*.com
+*.class
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# .NET stuff #
+##############
+.vs/
+*.suo
+*.user
+*.sdf
+*.opensdf
+*.DotSettings.user
+obj/
+
+packages/
